# ChangeLog for net-dialup/ppp
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.46 2004/01/18 00:42:38 lanius Exp $

  18 Jan 2004; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.2_beta3-r1.ebuild:
  enable radius

  17 Jan 2004; Heinrich Wendel <lanius@gentoo.org> files/2.4.2b3/ip-down,
  files/2.4.2b3/ip-up:
  resolv.conf permissions again, took method from debian

  12 Jan 2004; Heinrich Wendel <lanius@gentoo.org> files/2.4.2b3/ip-down,
  files/2.4.2b3/ip-up:
  resolv.conf permissions again

  01 Jan 2004; <tuxus@gentoo.org> ppp-2.4.1-r14.ebuild:
  Added mips to KEYWORDS

  27 Dec 2003; Heinrich Wendel <lanius@gentoo.org> files/2.4.2b3/net.ppp0:
  fixed sleep command to work on all locales (bug #36571)

  27 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.2_beta3-r1.ebuild:
  fixed sed expression to only replace pppoe.so but not rp-pppoe.so

  26 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.2_beta3-r1.ebuild:
  automatically change pppoe.so to rp-pppoe.so (library name changed in 2.4.2)

  23 Dec 2003; Brad House <brad_mssw@gentoo.org> ppp-2.4.2_beta3-r1.ebuild:
  freezes on compile on amd64, even after libtoolize addition

  22 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.1-r11.ebuild,
  ppp-2.4.1-r12.ebuild, ppp-2.4.1-r13.ebuild, ppp-2.4.2_beta3.ebuild:
  removed old versions

  22 Dec 2003; Heinrich Wendel <lanius@gentoo.org> files/2.4.2b3/ip-down,
  files/2.4.2b3/ip-up, files/2.4.2b3/net.ppp0:
  speed up startup in special cases (bug #36195)

*ppp-2.4.2_beta3-r1 (22 Dec 2003)

  22 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.2_beta3-r1.ebuild,
  files/2.4.2b3/confd.ppp0, files/2.4.2b3/net.ppp0:
  added support for leased-line pppd setups (bug #33290)

*ppp-2.4.2_beta3-r1 (22 Dec 2003)

  22 Dec 2003; Heinrich Wendel <lanius@gentoo.org> ppp-2.4.2_beta3-r1.ebuild,
  files/2.4.2b3/README.mpls, files/2.4.2b3/cflags.patch,