@@ -1,23 +1,41 @@
 MD5 51457a2491f5e903b350d582b49f7c51 ppp-2.4.2_beta3-r1.ebuild 3877
+MD5 7226a185b85b8dd36ce1eefb89ec2505 ppp-2.4.1-r14.ebuild 4617
+MD5 4049ff8545e5ef9d925a3e59ab0e6b00 ppp-2.4.2.ebuild 3812
+MD5 cabf1778c1d6e6a55f25ac9f26d3d808 ChangeLog 8237
+MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
 MD5 4e62cdeb360ca0a22becbd2deb6f2dac files/pon 957
 MD5 86cdaf133f7a79fb464f02d83afc7734 files/plog 146
 MD5 05b7394b35a2342033b52134568bf6b8 files/poff 2723
-MD5 5f6f3203688bc5a2eceef8301f482c9f files/chat-default 344
+MD5 03eb44456283c43760269a92083946d3 files/chat-default 345
 MD5 824964465508977f9d0836f029d6b02f files/ppp-2.4.1-openssl-0.9.6-mppe-patch.gz 36112
 MD5 47bae70427ec4cb3ea1cc87ae799d0e3 files/gcc33-amd64.patch 1207
 MD5 c74b7e519f593babcfc3821832d72819 files/ip-up 282
 MD5 44cc662ba9aa61dd9add3ddd4c5ded57 files/pon.1 3607
 MD5 feb6723fa9b971cb443cff79693db0cd files/ppp-crypto-fix.patch.bz2 35770
-MD5 271b9ea36d7e7c5c6587036927d604e6 files/confd.ppp0 3309
+MD5 208e12ddd9a3e4c4ac470e9c4d7d7144 files/confd.ppp0 3310
 MD5 4fda43c2f3f8b5b58a58e5d238991c0b files/digest-ppp-2.4.1-r14 65
 MD5 f82a3ae0dba4ce6031bbf1405071e827 files/ppp-2.4.1-r10.patch 311
 MD5 b783e9bd9ac5956c582499f0623195fe files/net.ppp0 4705
 MD5 8368eb79ad4618c3c6753801b5c4c689 files/gcc3.3-multiline.patch 1673
+MD5 8d2dfaf7418945cb19864167542b14c0 files/digest-ppp-2.4.2 61
 MD5 6f7e70fee6e827ad992da785cba032c6 files/digest-ppp-2.4.2_beta3-r1 63
 MD5 eb5dfeb9b6a2c8b4b2f23df4980952e0 files/ppp-2.4.1-MSCHAPv2-fix.patch 507
 MD5 5d83af7b897082a0b1ecd70a2cc2a0c7 files/modules.ppp 268
 MD5 0713ffc9ae6e3ee4ef0f5c3cb752b3ea files/ip-down 285
 MD5 f0ad3e0c62aec1771536caf00e28b9c6 files/pppoe.html 7605
+MD5 2890b47660f967a07ac5b211850e46c5 files/2.4.2/options-pptp 238
+MD5 7004513b8b14aad3e2f598535e672af4 files/2.4.2/chat-default 351
+MD5 aade0f158628e38b74a080bd40222bc3 files/2.4.2/ip-up 1055
+MD5 1c6a75aa9390438f483e2885ea40ca72 files/2.4.2/killaddr-smarter.patch 6225
+MD5 12500a756925e9d8f4b2b655e95a2541 files/2.4.2/confd.ppp0 2784
+MD5 fa2a5b8df496922fa2fb592115953b6b files/2.4.2/options-pppoe 53
+MD5 bf0ee7e6765e3b18dbe3964be6cd4500 files/2.4.2/mpls.patch 10506
+MD5 acb0f867e42e9a380eaf8e1c312ad63b files/2.4.2/net.ppp0 4343
+MD5 1fd88dda7f4996799c69a9501d42cc23 files/2.4.2/README.mpls 530
+MD5 5d83af7b897082a0b1ecd70a2cc2a0c7 files/2.4.2/modules.ppp 268
+MD5 09fcad33830cb2af02446902cf6883c6 files/2.4.2/ip-down 801
+MD5 f0ad3e0c62aec1771536caf00e28b9c6 files/2.4.2/pppoe.html 7605
+MD5 0e16e7bb8ae71505e719fe5471bd2097 files/2.4.2/cflags.patch 3403
 MD5 2890b47660f967a07ac5b211850e46c5 files/2.4.2b3/options-pptp 238
 MD5 7004513b8b14aad3e2f598535e672af4 files/2.4.2b3/chat-default 351
 MD5 7fd76d97cb9a07a6b23b3ab7a0c5cc2c files/2.4.2b3/ip-up 1168
@@ -31,6 +49,3 @@ MD5 5d83af7b897082a0b1ecd70a2cc2a0c7 files/2.4.2b3/modules.ppp 268
 MD5 cb8bde7fab636f046c94e7aa52234ef2 files/2.4.2b3/ip-down 914
 MD5 f0ad3e0c62aec1771536caf00e28b9c6 files/2.4.2b3/pppoe.html 7605
 MD5 0e16e7bb8ae71505e719fe5471bd2097 files/2.4.2b3/cflags.patch 3403
-MD5 7226a185b85b8dd36ce1eefb89ec2505 ppp-2.4.1-r14.ebuild 4617
-MD5 cabf1778c1d6e6a55f25ac9f26d3d808 ChangeLog 8237
-MD5 ec2f84816306825d125d0c01bd86758d metadata.xml 163
